wier/force-app/main/default/objects/Contract_CheckList__c/Contract_CheckList__c.object-meta.xml
<CustomObject>
    <label>PO Checklist</label>
    <nameField>
        <label>Details</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Handover to Contract Checklist</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>