wier/force-app/main/default/objects/Contract_CheckList__c/fields/Assignee_Comments__c.field-meta.xml
<CustomField>
    <fullName>Assignee_Comments__c</fullName>
    <label>Assignee Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>