wier/force-app/main/default/objects/Contract_CheckList__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>COpportunity__c</referenceTo>
    <relationshipName>Handover_to_Contract_CheckList</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>