wier/force-app/main/default/objects/Contract_CheckList__c/fields/PO_Attachments__c.field-meta.xml
<CustomField>
    <fullName>PO_Attachments__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PO Attachments</label>
    <referenceTo>PO_Attachments__c</referenceTo>
    <relationshipLabel>Handover to Contract Checklist</relationshipLabel>
    <relationshipName>Handover_to_Contract_CheckList</relationshipName>
    <type>Lookup</type>
</CustomField>