wier/force-app/main/default/objects/Contract_CheckList__c/fields/Wheather_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Wheather_Applicable__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Wheather Applicable</label>
    <type>Checkbox</type>
</CustomField>